--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
   <section id="title">
-    <div class="container-fluid">
+    <div class="container-fluid title-container">
 
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -56,7 +56,7 @@
   </section>
 
   <section id="profiles">
-    <div class="container-fluid">
+    <div class="container-fluid pro-container">
       <div class="row">
         <div class="col-md-4 krish-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
