--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
   </section>
 
   <section id="profiles">
-    <div class="container-fluid pro-container">
-      <div class="row">
-        <div class="col-lg-4 krish-profile profile-box">
+
+
+        <div class="col-lg-4 col-md-6 krish-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Krish Chadha</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
@@ -66,7 +66,7 @@
             <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a herf="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
           </p>
         </div>
-        <div class="col-lg-4 chinmay-profile profile-box">
+        <div class="col-lg-4 col-md-6 chinmay-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Chinmay Pandya</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
@@ -74,7 +74,7 @@
             <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
           </p>
         </div>
-        <div class="col-lg-4 raj-profile profile-box">
+        <div class="col-lg-4 col-md-6 raj-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Raj Randive</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
@@ -82,9 +82,9 @@
             <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
           </p>
         </div>
-      </div>
 
-    </div>
+
+
   </section>
 
 
