--- a/index.html
+++ b/index.html
@@ -58,29 +58,29 @@
   <section id="profiles">
 
 
-        <div class="col-lg-4 col-md-6 krish-profile profile-box">
+        <div class="krish-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Krish Chadha</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-          <p>
+          <span>
             <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a herf="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
-          </p>
+          </span>
         </div>
-        <div class="col-lg-4 col-md-6 chinmay-profile profile-box">
+        <div class="chinmay-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Chinmay Pandya</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-          <p>
+          <span>
             <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
-          </p>
+          </span>
         </div>
-        <div class="col-lg-4 col-md-6 raj-profile profile-box">
+        <div class="raj-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Raj Randive</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-          <p>
+          <span>
             <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
-          </p>
+          </span>
         </div>
 
 
