--- a/index.html
+++ b/index.html
@@ -28,13 +28,10 @@
               <a class="nav-link" href="">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Krish</a>
+              <a class="nav-link" href="#profiles">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Chinmay</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Raj</a>
+              <a class="nav-link" href="">Contact Us</a>
             </li>
           </ul>
         </div>
@@ -48,8 +45,8 @@
         <div class="col-lg-6">
           <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
         </div>
-        <div class="col-lg-6">
-          <img class="title-image" src="images/kc-cp.jpg" alt="chinmay-krish-pic">
+        <div class="col-lg-6 code-div">
+          <i class="fa-solid fa-code code-icon"></i>
         </div>
       </div>
 
@@ -62,25 +59,31 @@
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Krish Chadha</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-          <span>
-            <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a herf="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
-          </span>
+
+            <a href="#"><i class="fa-brands fa-instagram"></i></a> <a herf="#"><i class="fa-brands fa-twitter"></i></a>
+
         </div>
         <div class="chinmay-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Chinmay Pandya</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-          <span>
-            <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
-          </span>
+
+
+              <a href="#"><i class="fa-brands fa-instagram"></i></a> <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
+
+          </div>
+
         </div>
         <div class="raj-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Raj Randive</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-          <span>
-            <a href="#"><i class="fa-brands fa-instagram fa-3x"></i></a> <a href="#"><i class="fa-brands fa-twitter fa-3x"></i></a>
-          </span>
+
+
+              <a href="#"><i class="fa-brands fa-instagram"></i></a> <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
+
+
+
         </div>
 
 
