--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+          <h1>Welcome ! This is a website developed by Our team.</h1>
         </div>
         <div class="col-lg-6 code-div">
           <i class="fa-solid fa-code code-icon"></i>
@@ -53,40 +53,33 @@
   </section>
 
   <section id="profiles">
-
-
+    <div class="row">
+      <div class="col-lg-4">
         <div class="krish-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Krish Chadha</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-
             <a href="#"><i class="fa-brands fa-instagram"></i></a> <a herf="#"><i class="fa-brands fa-twitter"></i></a>
-
         </div>
+      </div>
+      <div class="col-lg-4">
         <div class="chinmay-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Chinmay Pandya</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-
-
               <a href="#"><i class="fa-brands fa-instagram"></i></a> <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
-
           </div>
-
-        </div>
+      </div>
+      <div class="col-lg-4">
         <div class="raj-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Raj Randive</h2>
           <button type="button" class="btn btn-outline-dark btn-lg profile-button">Visit page</button>
-
-
               <a href="#"><i class="fa-brands fa-instagram"></i></a> <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
-
-
-
         </div>
+      </div>
 
-
+    </div>
 
   </section>
 
