--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <section id="profiles">
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-sm-6">
         <div class="krish-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Krish Chadha</h2>
@@ -62,7 +62,7 @@
             <a href="#"><i class="fa-brands fa-instagram"></i></a> <a herf="#"><i class="fa-brands fa-twitter"></i></a>
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-sm-6">
         <div class="chinmay-profile profile-box">
           <i class="fa-solid fa-user fa-9x"></i>
           <h2>Chinmay Pandya</h2>
